2008-07-02  Guillem Jover  <guillem@debian.org>

	* lib/fields.c (convert_string): Remove unneeded variable assignments.
	Get rid this way of an int variable.

2008-07-02  Guillem Jover  <guillem@debian.org>

	* lib/fields.c (convert_string): Change nvip to be const and use a
	proper assignment instead of a sneaky cast through memcpy. Remove
	unneeded length caching as all current namevalue arrays have it
	precomputed.

2008-07-02  Guillem Jover  <guillem@debian.org>

	* lib/fields.c (convert_string): Use a capped string length instead
	of using last namevalue length member when printing the disallowed
	value.

2008-07-02  Guillem Jover  <guillem@debian.org>

	* src/query.c (limiteddescription): Use NULL instead of 0.
	(list1package, searchfiles, enqperpackage, main): Likewise.
	(cipaction, ignoredependss, cmdinfos): Likewise.
	(ACTION, OBSOLETE): Likewise.
	* src/select.c (setselections): Likewise.
	* src/trigcmd.c (cmdinfos): Likewise.

2008-07-02  Guillem Jover  <guillem@debian.org>

	* src/remove.c (removal_bulk_remove_configfiles): Remove wrong comment
	not matching the code.

2008-07-02  Guillem Jover  <guillem@debian.org>

	* src/archives.c (tarfile_skip_one_forward): Make static.

2008-07-02  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-priv.h: Include <stddef.h>.
	* lib/string.c: Include <config.h> and <dpkg-priv.h>.

2008-07-02  Guillem Jover  <guillem@debian.org>

	* dselect/Makefile.am (curkeys.h): Use '$(CPP)' instead of '$(CC) -E'.

2008-07-01  Guillem Jover  <guillem@debian.org>

	* src/depcon.c (findbreakcyclerecursive): Use the debug function
	instead of reimplementing its logic.
	* src/help.c (preexecscript): Likewise.

2008-07-01  Egmont Koblinger  <egmont@uhulinux.hu>

	* src/processarc.c (process_archive): Properly lstat the correct
	file on upgrade when using --root.

2008-07-01  Guillem Jover  <guillem@debian.org>

	* src/processarc.c (process_archive): Do not allocate a struct stat