@@ -21,6 +21,7 @@ Branden Robinson <branden@debian.org>
 Branko Lankester
 Brian M. Carlson <sandals@crustytoothpaste.ath.cx>
 Bruce Perens <bruce@pixar.com>
+Bruce Sass <bmsass@shaw.ca>
 Carl Streeter <streeter@cae.wisc.edu>
 Carlos Laviola <claviola@brfree.com.br>
 Carlos Z.F. Liu <carlosliu@users.sourceforge.net>
