@@ -62,6 +62,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     they are not always available. Closes: #488293
   * Improve error message in install-info when the file doesn't exist.
     Thanks to Thomas Hood <jdthood@yahoo.co.uk>. Closes: #107098
+  * Use description of installed package as fallback in dselect.
+    Based on a patch from Bruce Sass <bmsass@shaw.ca>. Closes: #21659
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
