@@ -1,3 +1,11 @@
+2008-07-04  Raphael Hertzog  <hertzog@debian.org>
+            Bruce Sass <bmsass@shaw.ca>
+
+	* dselect/pkginfo.cc (packagelist::itd_description), dselect/pkgtop.cc
+	(packagelist::redraw1itemsel): Use description of installed
+	package as a fallback if the package is not more listed in the
+	available list.
+
 2008-07-02  Guillem Jover  <guillem@debian.org>
 
 	* lib/fields.c (convert_string): Remove unneeded variable assignments.
